Fixed spacing issue with forms.html and fixed link issue

--- a/forms-styles.css
+++ b/forms-styles.css
@@ -124,7 +124,7 @@ nav {
   flex: 1;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 #sign,
